--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^4.12.0",
+    "react-type-animation": "^3.2.0",
     "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^6.0.0",
     "slugify": "^1.6.6",
